Update to next Quarkus LTS version 3.27 (#2006)
* Update to next Quarkus LTS version 3.27.1

Signed-off-by: Michael Edgar <medgar@redhat.com>

* Setup Strimzi CRDs for OperationFilterTestProfile

Signed-off-by: Michael Edgar <medgar@redhat.com>

* Using platform version of quarkus-operator-sdk-bom

Signed-off-by: Michael Edgar <medgar@redhat.com>

---------

Signed-off-by: Michael Edgar <medgar@redhat.com>